--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 indoc = "2.0.4"
+itertools = "0.12.0"
 joinery = "3.1.0"
 regex = "1.10.2"
 tap = "1.0.1"
