--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -11,5 +11,6 @@ aoc-runner-derive = "0.3.0"
 indoc = "2.0.4"
 itertools = "0.12.0"
 joinery = "3.1.0"
+num = "0.4.1"
 regex = "1.10.2"
 tap = "1.0.1"
