--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
+cargo-util = "0.2.7"
 indoc = "2.0.4"
 itertools = "0.12.0"
 joinery = "3.1.0"
